# homelab-hub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LOCALmd  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-04-26T19-31-44-769Z.yml  page-2026-05-30T12-34-17-115Z.yml  page-2026-05-30T12-34-28-240Z.yml  page-2026-05-30T12-34-38-899Z.yml
claude_usage/: apps.py  models.py  predictor.py  pricing.py  services.py  urls.py  views.py
claude_usage/migrations/: 0001_initial.py  0002_claudeusagesnapshot.py  0003_remove_message_count.py  0004_claudetoolcount.py  0005_remove_unused.py
config/: admin.py  models.py  utils.py
config/migrations/: 0001_initial.py  0002_value_to_textfield.py
dashboard/: models.py  temp.json  views.py
dashboard/migrations/: 0001_initial.py  0002_agentcall_source_agentcall_source_id_and_more.py
dashboard/services/: aws_billing.py  backup_status.py  chatbot.py  darts.py  emporia.py  enphase.py  k8s.py  network.py  prometheus_svc.py  splunk.py  status_overview.py  synology.py  tempo.py  (+1 more)
documentation/: OTEL_README.md
financial/: admin.py  calculator.py  forms.py  models.py  tax.py  urls.py  views.py
health/: admin.py  models.py  urls.py  views.py
hobbies/: admin.py  models.py  urls.py  utils.py  views.py
hub/: asgi.py  middleware.py  otel.py  settings.py  urls.py  wsgi.py
k8s/: backup-pvc.yaml  cronjob-backup.yaml  mediafiles-pvc.yaml  ping-hosts-cronjob.yaml  pull-agent-calls-cronjob.yaml  secrets.yaml
monitoring/: admin.py  apps.py  models.py  services.py
templates/: base.html
(+91 files in other folders)
